<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#040404"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/prehisp_nico_s"
            android:textAlignment="center"
            android:textColor="#FFB800"
            android:fontFamily="@font/catalish_huntera"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/indigo_daisy"
            android:text="@string/login"
            android:textColor="#FFB800"
            android:textSize="40sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/ingresa_con_tu_correo_y_contrase_a"
            android:textColor="#FFB800" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/email"
            android:textColor="#FFB800"
            android:layout_marginStart="25dp">
        </TextView>
        <!-- Campos de texto para correo y contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ediTextEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/custom_bg"
                android:fontFamily="@font/roboto_regular"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColorHint="#546E7A"
                android:textSize="14sp"
                tools:ignore="SmallSp,TextContrastCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/password"
            android:textColor="#FFB800"
            android:layout_marginStart="25dp">
        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleDrawable="@drawable/password_toggle"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ediTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="creditCardExpirationDate"
                android:background="@drawable/custom_bg"
                android:fontFamily="@font/roboto_regular"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="#546E7A"
                android:textSize="14sp"
                tools:ignore="SmallSp,TextContrastCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_Entra"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="22dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="22dp"
            android:text="@string/entrar"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/Respass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurar_contrase_a"
            android:textColor="#FFB800"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:fontFamily="@font/josefinslab_bold"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_tienes_una_cuenta"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:gravity="center"
            android:paddingTop="8dp"
            android:fontFamily="@font/josefinslab_bold"
            android:paddingBottom="8dp"
            tools:ignore="SmallSp" />
        <TextView
            android:id="@+id/CrearCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear_cuenta"
            android:fontFamily="@font/josefinslab_bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            tools:ignore="SmallSp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
