<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#040404"
    android:orientation="horizontal"
    tools:context=".CrearCuenta">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/prehisp_nico_s"
            android:textAlignment="center"
            android:textColor="#FFB800"
            android:fontFamily="@font/catalish_huntera"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <!-- Campos de texto para correo y contraseña -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="25dp"
            android:text="@string/nombre"
            android:textColor="#FFB800" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ediTextNombreCreate"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:autofillHints=""
                android:background="@drawable/custom_bg"
                android:fontFamily="@font/roboto_regular"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColorHint="#546E7A"
                android:textSize="12sp"
                tools:ignore="SmallSp,TextContrastCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/apellido_s"
            android:textColor="#FFB800"
            android:layout_marginStart="25dp">
        </TextView>
        <!-- Campos de texto para correo y contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ediTextApellidosCreate"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:autofillHints=""
                android:background="@drawable/custom_bg"
                android:fontFamily="@font/roboto_regular"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColorHint="#546E7A"
                android:textSize="12sp"
                tools:ignore="DuplicateIds,SmallSp,SpeakableTextPresentCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/email"
            android:textColor="#FFB800"
            android:layout_marginStart="25dp">
        </TextView>
        <!-- Campos de texto para correo y contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ediTextEmailCreate"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/custom_bg"
                android:fontFamily="@font/roboto_regular"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColorHint="#546E7A"
                android:textSize="12sp"
                tools:ignore="SmallSp,TextContrastCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/password"
            android:textColor="#FFB800"
            android:layout_marginStart="25dp">
        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleDrawable="@drawable/password_toggle"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ediTextPasswordCreate"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="creditCardExpirationDate"
                android:background="@drawable/custom_bg"
                android:fontFamily="@font/roboto_regular"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="#546E7A"
                android:textSize="12sp"
                tools:ignore="SmallSp,TextContrastCheck,SpeakableTextPresentCheck" />

            <!-- Nuevo TextView para mostrar el mensaje de error -->
            <TextView
                android:id="@+id/PropiedadesContraseña"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_gravity="center"
                android:text=""
                android:textSize="13sp"
                android:textColor="#ED5706"
                android:visibility="gone" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/repitPass"
            android:textColor="#FFB800"
            android:layout_marginStart="25dp">
        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleDrawable="@drawable/password_toggle"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:boxBackgroundMode="none">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ediTextRepetirContraseñaCreate"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="creditCardExpirationDate"
                android:background="@drawable/custom_bg"
                android:fontFamily="@font/roboto_regular"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="#546E7A"
                android:textSize="12sp"
                tools:ignore="SmallSp,TextContrastCheck,SpeakableTextPresentCheck" />
            <!-- Nuevo TextView para mostrar el mensaje de error -->
            <TextView
                android:id="@+id/PropiedadesRepContraseña"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_gravity="center"
                android:text=""
                android:textSize="13sp"
                android:textColor="#ED5706"
                android:visibility="gone" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:orientation="vertical">

        <!-- Nuevo TextView para mostrar el mensaje de error -->
        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:text=""
            android:textSize="13sp"
            android:textColor="#ED5706"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_CrearCuenta"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="10dp"
            android:text="@string/crear_cuenta"
            android:textColor="@color/black" />
        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_c"
            android:text="@string/cancelar"
            android:textColor="@color/white"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>